--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Apr 18 2019 18:59:27 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Apr 18 2019 19:23:37 GMT+0000 (UTC)  -->
 <html data-wf-page="5bf330e1e30af9600d7dbbcc" data-wf-site="5bb42c1c096def45f6f9cd6b">
 <head>
   <meta charset="utf-8">
@@ -494,7 +494,7 @@ $(function() {
             <div class="tab-icon maps"></div>
             <div class="tab-title">MAPS</div>
           </a>
-          <a data-w-tab="Tasks" class="side-nav-tab w-inline-block w-clearfix w-tab-link">
+          <a data-w-tab="Tasks" class="side-nav-tab w-inline-block w-clearfix w-tab-link w--current">
             <div class="tab-icon tasks"></div>
             <div class="tab-title">TASKS</div>
           </a>
@@ -502,7 +502,7 @@ $(function() {
             <div class="tab-icon insights"></div>
             <div class="tab-title">INSIGHTS</div>
           </a>
-          <a data-w-tab="Admin 2" class="side-nav-tab w-inline-block w-clearfix w-tab-link w--current">
+          <a data-w-tab="Admin 2" class="side-nav-tab w-inline-block w-clearfix w-tab-link">
             <div class="tab-icon performance"></div>
             <div class="tab-title">PerFORMANCE</div>
           </a>
@@ -2162,7 +2162,7 @@ $(function() {
               </div>
             </div>
           </div>
-          <div data-w-tab="Tasks" class="frame-pane w-tab-pane">
+          <div data-w-tab="Tasks" class="frame-pane w-tab-pane w--tab-active">
             <div class="filter-container vertical">
               <div class="filter-row w-clearfix">
                 <div class="input-container"><img src="images/Calendar.png" width="16" alt="" class="calendar-icon">
@@ -2774,18 +2774,18 @@ $(function() {
             </div>
           </div>
           <div data-w-tab="Admin" class="frame-pane w-tab-pane"></div>
-          <div data-w-tab="Admin 2" class="frame-pane w-tab-pane w--tab-active">
+          <div data-w-tab="Admin 2" class="frame-pane w-tab-pane">
             <div data-duration-in="300" data-duration-out="100" class="sub-frame w-tabs">
               <div class="sub-nav w-tab-menu">
-                <a data-w-tab="Tab 1" class="horizontal-nav-tab w-inline-block w-tab-link">
+                <a data-w-tab="Tab 1" class="horizontal-nav-tab w-inline-block w-tab-link w--current">
                   <div class="horizontal-nav-title">SUPERVISOR/PICKER</div>
                 </a>
-                <a data-w-tab="Tab 2" class="horizontal-nav-tab w-inline-block w-tab-link w--current">
+                <a data-w-tab="Tab 2" class="horizontal-nav-tab w-inline-block w-tab-link">
                   <div class="horizontal-nav-title">FEEDBACK</div>
                 </a>
               </div>
               <div class="w-tab-content">
-                <div data-w-tab="Tab 1" class="tab-container w-tab-pane">
+                <div data-w-tab="Tab 1" class="tab-container w-tab-pane w--tab-active">
                   <div class="filter-container vertical">
                     <div class="filter-row">
                       <div class="input-container"><img src="images/Calendar.png" width="16" alt="" class="calendar-icon">
@@ -3347,7 +3347,7 @@ function toogleDataSeries(e){
                     </div>
                   </div>
                 </div>
-                <div data-w-tab="Tab 2" class="tab-container w-tab-pane w--tab-active">
+                <div data-w-tab="Tab 2" class="tab-container w-tab-pane">
                   <div class="filter-container vertical">
                     <div class="filter-row w-clearfix">
                       <div class="input-container"><img src="images/Calendar.png" width="16" alt="" class="calendar-icon">
